# po

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  README.adoc  README.md  WELCOME.po  configure  eigen.cpp  robin.cpp
.buildkite/: pipeline.yml
.buildkite/steps/: build.sh  release.sh
data/mesh/: README.adoc
data/mesh/diffuseur/: README.adoc
data_conversion/: CMakeLists.txt  README.md  acusim_fields.cpp
data_convertion/: CMakeLists.txt  README.md  acusim_fields.cpp
dmd/: graph.cpp
doc/: README.adoc  README.md
doc/Presentation/: .gitignore  Presentation.tex
doc/avancementPEPS/: mystyle.sty  peps.tex  ref.bib
doc/avancementPEPS/tex/: analytique.tex  condition.tex  mixed.tex
doc/documentation/: doxystyle.sty
doc/funding/: README.md  cemosis-po.tex
doc/minutes/: 140303.md  140317.md  140401.md  140429.md  140514.md  140618.md  141121.md  141205.md  141219.md  150206.md  150213.md  150227.md  150417.md  150630.md  README.md
doc/note/: mystyle.sty  note.tex
doc/pres/: .gitignore  pres.tex
doc/rapport/: .gitignore  rapport.tex  rapport_20131209_corrBS.tex  rapport_20131209_corrBS_2.tex
doc/report/: .gitignore  mystyle.sty  note.tex  ref.bib  report.tex
doc/report/tex/: .gitignore  algo.tex  ccl.tex  intro.tex  mesh.tex  mode.tex  pression.tex  probleme.tex  probleme.tex~  prog.tex  ps.tex  relev.tex  remerciement.tex  result.tex  reunion.tex  test.tex  title.tex
doc/report/tex/annexes/: test.tex
doc/report/tex/discr/: mode.tex  old_mode.tex  pression.tex  prog.tex  ps.tex
doc/report/tex/problem/: mode.tex  old_mode.tex  press.tex  problem.tex  ps.tex  relev.tex
freefem/: ModeGen_Curl2_20131210_BS  ModesGenBis.edp  Sto_Poi_Cyl_Low_Re_Adim_05.edp  modeTest.edp
lib/h3d/examples/: CMakeLists.txt  main.cpp
mesh/: BScyl.geo  cylCooCyl.geo  rectBox.geo  shell.geo  tetra.geo  tuyere.geo
mesh/HYPERMESH.DIR/: testCubeExport.crd  testCubeExport.fluid_cube.tet4.cnn  testCubeExport.fluid_cube.tet4.inflow_face.tria3.ebc
offline/: CMakeLists.txt  initcoeff.hpp  main.cpp  po_offline.cfg  solvereigenns2.hpp
offline/cylinderAdim/: po_offline.cfg
online/: CMakeLists.txt  main.cpp  po_online.cfg  solvera.hpp  solverns2.hpp  solverspectralproblem.hpp
online/cylinderAdim/: po_online.cfg
plasticomnium/: CMakeLists.txt
plasticomnium/src/: eig.cpp
src/: .gitignore  CMakeLists.txt  Qcriterion_fromQradVel.cpp  Qcriterion_update.cpp  README.adoc  README.md  basischange.cpp  converter_database_acusim.cpp  converter_database_acusim_new.cpp  converter_database_acusim_old.cpp  converteracusimdatabase.hpp  converteracusimdatabase_new.hpp  darcy.cpp  darcy.h  dmd.cpp  eig.cpp  eigen.cpp  eigen_curl.cpp  eigen_curl.h  eigenlap.cpp  eigenlap.h  eigenlapZ.cpp  eigenlapZ.h  eigenmixed.cpp  eigenmixt.cpp  eigenprob.cpp  eigenprob.hpp  eigenstokes.cpp  feelppdatabase.hpp  hmToMsh.sh  log_summary  main.cpp  marche_GDR_25d.step  modeGen.cpp  mode_gen_curl.cpp  mode_gen_lap.cpp  mode_generator.cpp  po_app.cfg  po_basischange.cfg  po_eigen.cfg  (+31 more)
src/freefem/: Mode_generator_20131021_BS.edp  ModesGenTer.edp  Nav_Sto_Poi_Cyl_High_Re_Adim_04.edp
src/mesh/: HM_Cyl_lowRe__2.mesh  HM_Cyl_lowRe__5.mesh  ModeGen_Lap_20131210_BS  cyl.msh  cylCooCar.geo  cyl_10.msh  cyl_8.msh  cylinder.geo  cylinderAdim.geo  gmsh.tpl  hmToMsh.sh  marcheAdim.geo  pyramide.geo  sphCooSph.geo  sphere.geo  tuyere.geo
src/mesh/HYPERMESH.DIR/: command.cmf  hmmenu.set  testCubeExport.fluid_cube.tet4.outflow_face.tria3.ebc  testCubeExport.fluid_cube.tet4.wall_face1.tria3.ebc  testCubeExport.fluid_cube.tet4.wall_face2.tria3.ebc  testCubeExport.fluid_cube.tet4.wall_face3.tria3.ebc  testCubeExport.fluid_cube.tet4.wall_face4.tria3.ebc
src/test/: AAA.cfg  AAA.cpp  BBB.cpp  CMakeLists.txt  CylinderStokes.cfg  CylinderStokes.cpp  MyCyl.geo  cubepi.geo  cylCooCar.geo  cylCooCyl.geo  doubleSphere.geo  eigencube.cpp  po_eigencube.cfg  po_eigenmixed.cfg  po_spheromak.cfg  po_test.cfg  po_testD1.cfg  po_testD1_car.cfg  po_testD1_cyl.cfg  po_test_car.cfg  po_test_curl.cfg  po_test_cyl.cfg  po_test_sph_sph.cfg  po_testgrad.cfg  po_testsph_car.cfg  sphCooCar.geo  spheromak.cpp  stokesmixed.cpp  test.cpp  testD1.cpp  test_curl.cpp  test_sph.cpp  testcurl.cpp  testsph.cpp
test/: AAA.cpp  BBB.cfg  CMakeLists.txt  CylinderStokes.cfg  CylinderStokes.cpp  eigenmixed.cpp  po_stokesmixed.cfg  spheromak.cpp  templateexample.cpp  test_cyl.cpp  test_grad.cpp
